--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/grilled-cheese.html">Grilled Cheese</a>
+    <a href="recipes/fried-eggs.html">Fried Eggs</a>
 </body>
 </html>
