--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,3 +1,17 @@
 <h1>Lasagna</h1>
 <img src="lasagna.jpg" alt="Picture of lasagna">
 <h2>Description</h2>
+<p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
+<h3>Ingredients</h3>
+<ul>
+    <li>Cheese</li>
+    <li>Tomato sauce</li>
+    <li>Pasta sheets</li>
+</ul>
+<h4>Steps</h4>
+<ol>
+    <li>Place thin layer of sauce in bottom of dish</li>
+    <li>Place pasta sheets over sauce</li>
+    <li>Place cheese over pasta sheet</li>
+    <li>Repeat steps 1-3</li>
+</ol>
